--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -5,6 +5,6 @@
 <ul>
 <li><a href="@{Application.samplePubLit()}">Download data from PUB_LIT</a></li>
 <li><a href="@{Application.luceneIndexing()}">Index text</a></li>
-<li><a href="@{Application.luceneQuery("transformation")}">Query</a></li>
+<li><a href="@{Application.luceneQuery("oxidative stress")}">Query</a></li>
 <li><a href="@{Application.dumpIndex()}">Dump Index</a></li>
 </ul>
