--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -5,9 +5,10 @@
 <ul>
 <li><a href="@{Application.samplePubLit()}">Download data from PUB_LIT</a></li>
 <li><a href="@{Application.luceneIndexing()}">Index text</a></li>
-<li><a href="@{Application.luceneQuery("datas interactions")}">Query</a></li>
+<li><a href="@{Application.luceneQuery("\"authors reply\"")}">Query</a></li>
 <li><a href="@{Application.dumpIndex()}">Dump Index</a></li>
 <li><a href="@{Application.simpleIndex()}">Do a simple index</a></li>
 <li><a href="@{Application.indexInDb()}">Save the index in the database</a></li>
 <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
+<li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts</a></li>
 </ul>
