--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -14,4 +14,5 @@
 <li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept</a></li>
 <li><a href="@{Application.loadontologies()}">Load NCIT from local file</a></li>
 <li><a href="@{Application.computeLength()}">Compute the length of the ontology terms</a></li>
+<li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
 </ul>
