--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -11,7 +11,7 @@
 <li><a href="@{Application.indexInDb()}">Save the index in the database</a></li>
 <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
 <li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts</a></li>
-<li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept</a></li>
+<li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
 <li><a href="@{Application.loadontologies()}">Load NCIT from local file</a></li>
 <li><a href="@{Application.computeLength()}">Compute the length of the ontology terms</a></li>
 <li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
