layout on the way

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,18 +1,22 @@
 #{extends 'main.html' /}
-#{set title:'Home' /}
+#{set title:'PubMed Trends' /}
 
-<h1>Trends</h1>
+<div class="page-header">
+    <h1>
+        Biomedical Literature Trends
+    </h1>
+</div>
 <ul>
-<li><a href="@{Application.samplePubLit()}">Download data from PUB_LIT</a></li>
-<li><a href="@{Application.luceneIndexing()}">Index text</a></li>
-<li><a href="@{Application.luceneQuery("\"authors reply\"")}">Query</a></li>
-<li><a href="@{Application.dumpIndex()}">Dump Index</a></li>
-<li><a href="@{Application.simpleIndex()}">Do a simple index</a></li>
-<li><a href="@{Application.indexInDb()}">Save the index in the database</a></li>
-<li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
-<li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts</a></li>
-<li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
-<li><a href="@{Application.loadontologies()}">Load NCIT from local file</a></li>
-<li><a href="@{Application.computeLength()}">Compute the length of the ontology terms</a></li>
-<li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
+    <li><a href="@{Application.samplePubLit()}">Download data from PUB_LIT</a></li>
+    <li><a href="@{Application.luceneIndexing()}">Index text</a></li>
+    <li><a href="@{Application.luceneQuery("\"authors reply\"")}">Query</a></li>
+    <li><a href="@{Application.dumpIndex()}">Dump Index</a></li>
+    <li><a href="@{Application.simpleIndex()}">Do a simple index</a></li>
+    <li><a href="@{Application.indexInDb()}">Save the index in the database</a></li>
+    <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
+    <li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts (TODO to remove)</a></li>
+    <li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
+    <li><a href="@{Application.loadontologies()}">Load NCIT from local file</a></li>
+    <li><a href="@{Application.computeLength()}">Compute the length of the ontology terms</a></li>
+    <li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
 </ul>
