--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,9 +2,7 @@
 #{set title:'PubMed Trends' /}
 
 <div class="page-header">
-    <h1>
-        Biomedical Literature Trends
-    </h1>
+    <h1>Biomedical Literature Trends</h1>
 </div>
 <ul>
     <li><a href="@{Application.samplePubLit()}">Download data from PUB_LIT</a></li>
@@ -16,7 +14,6 @@
     <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
     <li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts (TODO to remove)</a></li>
     <li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
-    <li><a href="@{Application.loadontologies()}">Load NCIT from local file</a></li>
-    <li><a href="@{Application.computeLength()}">Compute the length of the ontology terms</a></li>
+    <li><a href="@{Application.loadontologies()}">Load NCIT from local file and compute length of terms</a></li>
     <li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
 </ul>
