--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -14,6 +14,6 @@
     <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
     <li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts (TODO to remove)</a></li>
     <li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
-    <li><a href="@{Application.loadontologies()}">Load NCIT from local file and compute length of terms</a></li>
+    <li><a href="@{Application.loadontologies()}">(R1) Load NCIT from local file and compute length of terms</a></li>
     <li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
 </ul>
