--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -12,8 +12,7 @@
     <li><a href="@{Application.simpleIndex()}">Do a simple index</a></li>
     <li><a href="@{Application.indexInDb()}">Save the index in the database</a></li>
     <li><a href="@{Application.computeTrends()}">Compute the trends and save them</a></li>
-    <li><a href="@{Application.computeNewConcepts()}">Compute the apparition of new concepts (TODO to remove)</a></li>
-    <li><a href="@{Application.tokenisejob()}">Compute the number of words in a concept (TODO replace description)</a></li>
     <li><a href="@{Application.loadontologies()}">(R1) Load NCIT from local file and compute length of terms</a></li>
-    <li><a href="@{Application.computeIndexDistribution()}">Compute the index distribution of phrases</a></li>
+    <li><a href="@{Application.computeIndexDistribution()}">(R2) Compute the index distribution of all phrases/concepts before saving</a></li>
+    <li><a href="@{Application.conceptDistribution()}">(R3) Compute the distribution and presence of the NCIT concept in the index</a></li>
 </ul>
