update job distribution

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -15,4 +15,6 @@
     <li><a href="@{Application.loadontologies()}">(R1) Load NCIT from local file and compute length of terms</a></li>
     <li><a href="@{Application.computeIndexDistribution()}">(R2) Compute the index distribution of all phrases/concepts before saving</a></li>
     <li><a href="@{Application.conceptDistribution()}">(R3) Compute the distribution and presence of the NCIT concept in the index</a></li>
+    <li><a href="@{Application.stratifiedIndex()}">(R4) Compute the stratified index for trend calculation.</a></li>
+
 </ul>
