--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -16,5 +16,5 @@
     <li><a href="@{Application.computeIndexDistribution()}">(R2) Compute the index distribution of all phrases/concepts before saving</a></li>
     <li><a href="@{Application.conceptDistribution()}">(R3) Compute the distribution and presence of the NCIT concept in the index</a></li>
     <li><a href="@{Application.stratifiedIndex()}">(R4) Compute the stratified index for trend calculation.</a></li>
-
+    <li><a href="@{Application.computeStratifiedFrequencies()}">(R5) Compute the stratified frequencies for all the phrases in the database.</a></li>
 </ul>
