--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -17,4 +17,6 @@
     <li><a href="@{Application.conceptDistribution()}">(R3) Compute the distribution and presence of the NCIT concept in the index</a></li>
     <li><a href="@{Application.stratifiedIndex()}">(R4) Compute the stratified index for trend calculation.</a></li>
     <li><a href="@{Application.computeStratifiedFrequencies()}">(R5) Compute the stratified frequencies for all the phrases in the database.</a></li>
+    <li><a href="@{Application.computeStratifiedFrequencies2()}">(R5-2) Compute the stratified frequencies, optimised methodology, for all the phrases in the database.</a></li>
+
 </ul>
