Open IF formula

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -17,5 +17,5 @@
     <li><a href="@{Application.stratifiedIndex()}">(R4) Compute the stratified index for trend calculation.</a></li>
     <li><a href="@{Application.computeStratifiedFrequencies()}">(R5) Compute the stratified frequencies for all the phrases in the database.</a></li>
     <li><a href="@{Application.computeStratifiedFrequencies2()}">(R5-2) Compute the stratified frequencies, optimised methodology, for all the phrases in the database.</a></li>
-
+    <li><a href="@{Application.computeOpenIF()}">(R6) Compute the Open IF.</a></li>
 </ul>
