--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -11,6 +11,6 @@
     <li><a href="@{Application.loadontologies()}">(R1) Load NCIT from local file and compute length of terms</a></li>
     <li><a href="@{Application.computeIndexDistribution()}">(R2) Compute the index distribution of all phrases/concepts before saving</a></li>
     <li><a href="@{Application.conceptDistribution()}">(R3) Compute the distribution and presence of the NCIT concept in the index</a></li>
-    <li><a href="@{Application.computeStratifiedFrequencies()}">(R5) Compute the stratified frequencies for all the phrases in the database.</a></li>
+    <li><a href="@{Application.computeTrends()}">Compute the trends for all phrases in the DB.</a></li>
     <li><a href="@{Application.computeMorphiaIF()}">Compute morphia Open IF.</a></li>
 </ul>
