--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,13 +4,24 @@
     <head>
         <title>#{get 'title' /}</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" media="screen" href="@{'/public/css/main.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/css/bootstrap.min.css'}">
+        <link rel="stylesheet" href="@{'public/font-awesome-4.1.0/css/font-awesome.min.css'}">
+        <link rel="stylesheet" href="@{'public/css/typeaheadjs.css'}">
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/js/jquery-2.1.1.min.js'}" type="text/javascript" charset="UTF-8"></script>
         <script src="@{'/public/js/bootstrap.min.js'}" type="text/javascript" charset="UTF-8"></script>
+        <script src="@{'/public/js/typeahead.bundle.js'}" type="text/javascript" charset="UTF-8"></script>
+        <script src="@{'/public/js/waypoints.min.js'}" type="text/javascript" charset="UTF-8"></script>
         #{get 'moreScripts' /}
+        <style>
+            td, th {text-align: center;}
+            th {width: 33%}
+        </style>
+
     </head>
     <body style="padding-top: 50px;">
         #{navbar /}
