--- a/app/views/tags/navbar.html
+++ b/app/views/tags/navbar.html
@@ -7,17 +7,22 @@
                     class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="@{Application.index()}"><span
-                    class="fa fa-flask"></span> Biomedical Literature Trends</a>
+                    class="fa fa-book"></span> Open Metrics</a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="${menu == 'home' ? 'active' : ''}"><a
-                        href="@{Application.index()}"><span class="fa fa-home"></span>
+                        href="@{Application.index()}"><span class="fa fa-university"></span>
                         Home</a></li>
                 <li class="${menu == 'curation' ? 'active' : ''}"><a
-                        href="@{Application.trends("standard", "desc")}"><span class="fa fa-eye"></span>
+                        href="@{Application.trends("standard", "desc")}"><span class="fa fa-bar-chart-o"></span>
                         Trends</a></li>
+                <li class="${menu == 'curation' ? 'active' : ''}"><a
+                        href=""><span class="fa fa-graduation-cap"></span>
+                        Open Impact Factor</a></li>
+                <li class="${menu == 'curation' ? 'active' : ''}"><a
+                        href=""><span class="fa fa-comment"></span> About</a></li>
             </ul>
         </div>
     </div>
